# io

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/executable/: CMakeLists.txt
src/executable/io_demo/: CMakeLists.txt  main.cpp
src/include/endian/: byte_swap.h
